--- a/index.html
+++ b/index.html
@@ -73,30 +73,30 @@
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Ethics Report</h3>
-                            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+                            <p class="text-muted mb-0"> KindKart reports on five major pillars of ethical businesses, as well as overall commitment to ethics.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Up to Date</h3>
-                            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+                            <h3 class="h4 mb-2">Alternative Shops</h3>
+                            <p class="text-muted mb-0"> Find alternative shopping options that better fit your principles as a shopper.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Ready to Publish</h3>
-                            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+                            <h3 class="h4 mb-2">Tracker</h3>
+                            <p class="text-muted mb-0">KindKart tracks your savings and reminds you to use it for good!</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-                            <h3 class="h4 mb-2">Made with Love</h3>
-                            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+                            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Smart Savings</h3>
+                            <p class="text-muted mb-0"> Enhance your online shopping experience with exclusive coupons and savings suggested to you by KindKart.  </p>
                         </div>
                     </div>
                 </div>
